# Kreuzstich

./: .gitignore  CMakeLists.txt  COPYRIGHT  LICENSE  NOTES  NOTES.claude.color-matching  NOTES.claude.privacy-policy  NOTES.claude.summary-features  README.md  bootstrap.sh  build.sh  cmake.sh  make
.github/: dependabot.yml
_oldversion/: CMakeLists.txt
colortables/: anchor.colors  bucilla.cyberstitchers.colors  candamar.colors  designworks.colors  dimensions.cyberstitchers.colors  dmc.colors  (+5 more)
kreuzstich/: CMakeLists.txt  error.cpp  error.h  version.cpp  version.h
kreuzstich/dialogs/: AboutDialog.cpp  AboutDialog.h  AboutDialog.ui  ImportPictureDialog.cpp  ImportPictureDialog.h  ImportPictureDialog.ui  NewPictureDialog.cpp  NewPictureDialog.h  NewPictureDialog.ui
kreuzstich/features/: GenerateToolsInterface.h  ImageToolsInterface.cpp  ImageToolsInterface.h  SaveInterface.cpp  SaveInterface.h  ZoomInterface.cpp  ZoomInterface.h
kreuzstich/tasks/: ImportTask.cpp  Task.h
kreuzstich/widgets/: PictureLabel.cpp  PictureLabel.h
kreuzstich/windows/: ChildWindow.h  Editor.cpp  Editor.h  Editor.ui  MainWindow.cpp  MainWindow.h  MainWindow.ui
libkreuzstich/: CMakeLists.txt  creator.cpp  exceptions.cpp  report.cpp  resources.cpp  thread.cpp  units.cpp
libkreuzstich/kreuzstich/: creator.h  exceptions.h  report.h  resources.h  thread.h  units.h
resources/i18n/: CMakeLists.txt  de_DE.ts
resources/i18n/creator/: de_DE.ts
resources/i18n/gui/: de_DE.ts
resources/i18n/gui-desktop/: de_DE.ts
resources/i18n/gui-qt/: de_DE.ts
src/core/: CMakeLists.txt  ColorSpace.cpp  ColorSpace.hpp  Pattern.cpp  Pattern.hpp  Picture.hpp  Selection.cpp  Selection.hpp  Thread.cpp  Thread.hpp  ThreadList.cpp  ThreadList.hpp  Version.cpp  Version.hpp.in
src/creator/: CMakeLists.txt  ColorSpace.cpp  ColorSpace.hpp  Thread.cpp  Version.hpp.in  dummy.cpp  dummy.hpp
src/creator/colors/: ColorSpace.cpp  ColorSpace.hpp  Thread.cpp  Thread.hpp
src/creator/files/: FileLocator.cpp  FileLocator.hpp  IFileSystem.hpp  IStandardPaths.hpp  QStandardPathsWrapper.cpp  QStandardPathsWrapper.hpp  StandardFileSystem.cpp  StandardFileSystem.hpp  ThreadListParser.cpp  ThreadListParser.hpp
src/creator/utils/: I18n.cpp  I18n.hpp  StringUtils.cpp  StringUtils.hpp  Version.cpp  Version.hpp.in
src/data-desktop/: CMakeLists.txt  FileLocator.cpp  FileLocator.hpp  IQStandardPathsWrapper.hpp  PictureFile.cpp  PictureFile.hpp  QStandardPathsWrapper.cpp  QStandardPathsWrapper.hpp  ThreadListParser.cpp  ThreadListParser.hpp
src/data-qt/: CMakeLists.txt  FileLocator.cpp  FileLocator.hpp  IQStandardPathsWrapper.hpp  PictureFile.cpp  PictureFile.hpp  QStandardPathsWrapper.cpp  QStandardPathsWrapper.hpp  ThreadListParser.cpp  ThreadListParser.hpp
src/data-web/: CMakeLists.txt  package-lock.json  package.json  tsconfig.json  vitest.config.ts
src/data-web/api/: Version.ts
src/data-web/src/: Application.ts  AuthHelper.ts  ConfigService.ts  PrivacyOptions.ts  Server.ts  ThreadListService.ts  UserService.ts  Version.ts.in  index.ts
src/data-web/src/types/: db.ts
src/data-web/src/types/api/: Generic.ts  ThreadLists.ts  User.ts  Version.ts
src/data-web/tests/: routing_version.test.ts
src/gui/: AboutDialog.cpp  AboutDialog.hpp  AboutDialog.ui  Application.cpp  Application.hpp  CMakeLists.txt  MainWindow.cpp  MainWindow.hpp  MainWindow.ui  main.cpp
src/gui-desktop/: AboutDialog.cpp  AboutDialog.hpp  AboutDialog.ui  Application.cpp  Application.hpp  CMakeLists.txt  MainWindow.cpp  MainWindow.hpp  MainWindow.ui  main.cpp
src/gui-qt/: Application.cpp  Application.hpp  CMakeLists.txt  MainWindow.hpp  MainWindow.ui  main.cpp
src/gui-web/: .gitignore  CMakeLists.txt  angular.json  package-lock.json  package.json  proxy.conf.json  tsconfig.app.json  tsconfig.json  tsconfig.spec.json  tsconfig.worker.json  vitest.config.ts
src/gui-web/src/: index.html  main.ts  styles.scss
src/gui-web/src/app/: app.config.ts  app.routes.ts  app.spec.ts  app.ts  test.worker.ts
src/gui-web/src/app/components/main-component/: main-component.html  main-component.scss  main-component.spec.ts  main-component.ts
src/gui-web/src/app/services/core-service/: core-service.spec.ts  core-service.ts
src/gui-web/src/app/services/data-service/: data-service.spec.ts  data-service.ts
src/gui-web/src/app/services/user-service/: user-service.spec.ts  user-service.ts
src/gui-web/src/environments/: environment.release.ts  environments.ts
src/wrapper-wasm/: CMakeLists.txt  ColorSpace.bindings.cpp  ColorSpace.d.ts  ColorSpace.namespace.js  ColorSpace.ts  Core.d.ts  Thread.bindings.cpp  Thread.d.ts  Thread.ts  ThreadList.bindings.cpp  ThreadList.ts  Version.bindings.cpp  Version.cpp  Version.d.ts  Version.namespace.js  Version.ts  index.ts
tests/: CMakeLists.txt  Mockup.cpp  Mockup.hpp  MockupBase.cpp  MockupBase.hpp
tests/core/: CMakeLists.txt  ColorSpace.cpp  ColorSpace.test.cpp  Pattern.cpp  Pattern.test.cpp  Selection.cpp  Selection.test.cpp  Thread.cpp  Thread.test.cpp  ThreadList.cpp  ThreadList.test.cpp  Version.cpp  Version.test.cpp
tests/creator/: ColorSpace.cpp  Thread.cpp  dummy.cpp
tests/creator/colors/: ColorSpace.cpp  Thread.cpp
tests/creator/files/: FileLocator.cpp  Mockup_IStandardPaths.cpp  Mockup_IStandardPaths.hpp  Mockup_QStandardPathsWrapper.cpp  Mockup_QStandardPathsWrapper.hpp  ThreadListParser.cpp
tests/creator/utils/: StringUtils.cpp  Version.cpp
tests/data-desktop/: CMakeLists.txt  FileLocator.cpp  FileLocator.test.cpp  Mockup_QStandardPathsWrapper.cpp  Mockup_QStandardPathsWrapper.hpp  PictureFile.cpp  PictureFile.test.cpp  QStandardPathsWrapper.mock.cpp  QStandardPathsWrapper.mock.hpp  ThreadListParser.cpp  ThreadListParser.test.cpp
tests/data-qt/: FileLocator.cpp  Mockup_QStandardPathsWrapper.cpp  Mockup_QStandardPathsWrapper.hpp  PictureFile.cpp  ThreadListParser.cpp
tests/testbase/: CMakeLists.txt  Mockup.cpp  Mockup.hpp
tests/wrapper-wasm/: CMakeLists.txt  ColorSpace.test.ts  Thread.test.ts  ThreadList.test.ts  Version.test.ts  package-lock.json  package.json  tsconfig.json  vitest.config.ts
(+142 files in other folders)
